spacing fixed

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 
 nav {
   background-color: #fff;
-  padding: 20px;
+  padding: 20px 0;
   width: 80px;
   display: flex;
   align-items: center;
@@ -35,11 +35,12 @@ nav {
 }
 
 nav.active {
-  width: 350px;
+  width: 360px;
 }
 
 nav ul {
   display: flex;
+  justify-content: center;
   list-style: none;
   padding: 0;
   margin: 0;
@@ -48,7 +49,7 @@ nav ul {
 }
 
 nav.active ul {
-  width: 100%;
+  width: 85%;
 }
 
 nav ul li {
